--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-# Delta Exchange India API Configuration
-DELTA_API_KEY=your_api_key_here
-DELTA_API_SECRET=your_api_secret_here
+# Delta Exchange India Configuration
 DELTA_BASE_URL=https://api.india.delta.exchange
-# Set to 'true' for Testnet
-IS_TESTNET=false
+
+# Telegram Configuration
+# Get your token from @BotFather
+TELEGRAM_BOT_TOKEN=your_bot_token_here
+# Get your chat ID from @userinfobot or similar
+TELEGRAM_CHAT_ID=your_chat_id_here
+
 # Trading Settings
 SYMBOL=BTCINR
-QUANTITY=0.001
